Implementação de segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 server.error.include-stacktrace=never
 server.error.include-message=never
 server.error.include-path=never
+
+api.security.token.secret=${JWT_SECRET: 12345678}
